--- a/super_ensemble_model.ipynb
+++ b/super_ensemble_model.ipynb
@@ -96,8 +96,8 @@
     "\n",
     "print(\"Num GPUs Available:\", len(tf.config.list_physical_devices('GPU')))\n",
     "\n",
-    "# مسارات البيانات\n",
-    "base_dir = r\"C:\\Users\\a7sn4\\Desktop\\xray\\chest_xray\"\n",
+
+    "base_dir = r\"........\xray\\chest_xray\"\n",
     "train_dir = os.path.join(base_dir, \"train\")\n",
     "val_dir = os.path.join(base_dir, \"val\")\n",
     "test_dir = os.path.join(base_dir, \"test\")\n",
@@ -197,7 +197,7 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# رسم منحنى الدقة Accuracy\n",
+
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -209,7 +209,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "\n",
-    "# رسم منحنى الخسارة Loss\n",
+
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(history.history['loss'], label='Training Loss', marker='o')\n",
     "plt.plot(history.history['val_loss'], label='Validation Loss', marker='x')\n",
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# حفظ النموذج بصيغة .keras\n",
+    "# saving model .keras\n",
     "model.save(\"super_ensemble_model072025.keras\")\n"
    ]
   },
@@ -276,10 +276,10 @@
     "from tensorflow.keras.preprocessing import image\n",
     "import numpy as np\n",
     "\n",
-    "# تحميل النموذج\n",
-    "model = load_model(\"super_ensemble_model.keras\")  # أو .h5\n",
+    "# load saving model\n",
+    "model = load_model(\"super_ensemble_model.keras\")  # or .h5\n",
     "\n",
-    "# دالة التنبؤ\n",
+    "# perdiction function\n",
     "def predict_xray(img):\n",
     "    img = img.resize((224, 224))\n",
     "    img_array = image.img_to_array(img) / 255.0\n",
@@ -290,7 +290,7 @@
     "    confidence = prediction if prediction >= 0.5 else 1 - prediction\n",
     "    return f\"Prediction: {label} ({confidence:.2%})\"\n",
     "\n",
-    "# واجهة Gradio\n",
+    "# Gradio interface\n",
     "interface = gr.Interface(\n",
     "    fn=predict_xray,\n",
     "    inputs=gr.Image(type=\"pil\"),\n",
@@ -360,10 +360,10 @@
     "from tensorflow.keras.preprocessing import image\n",
     "import numpy as np\n",
     "\n",
-    "# تحميل النموذج\n",
+    "# load model\n",
     "model = load_model(\"super_ensemble_model072025.keras\")  # أو .h5\n",
     "\n",
-    "# دالة التنبؤ\n",
+
     "def predict_xray(img):\n",
     "    img = img.resize((224, 224))\n",
     "    img_array = image.img_to_array(img) / 255.0\n",
@@ -374,7 +374,7 @@
     "    confidence = prediction if prediction >= 0.5 else 1 - prediction\n",
     "    return f\"Prediction: {label} ({confidence:.2%})\"\n",
     "\n",
-    "# واجهة Gradio\n",
+
     "interface = gr.Interface(\n",
     "    fn=predict_xray,\n",
     "    inputs=gr.Image(type=\"pil\"),\n",
@@ -3816,21 +3816,22 @@
    "source": [
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
-    "# الحصول على التنبؤات الاحتمالية من النموذج\n",
+
     "y_pred_prob = model.predict(test_data)\n",
     "\n",
-    "# تحويل الاحتمالات إلى فئات ثنائية (0 أو 1)\n",
-    "y_pred = (y_pred_prob >= 0.5).astype(int).reshape(-1)\n",
+
+
+"y_pred = (y_pred_prob >= 0.5).astype(int).reshape(-1)\n",
     "\n",
-    "# الفئات الحقيقية\n",
+
     "y_true = test_data.classes\n",
     "\n",
-    "# التقرير الكامل (Accuracy, Precision, Recall, F1)\n",
+
     "target_names = list(test_data.class_indices.keys())\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_true, y_pred, target_names=target_names))\n",
     "\n",
-    "# مصفوفة الالتباس (اختياري)\n",
+
     "print(\"Confusion Matrix:\")\n",
     "print(confusion_matrix(y_true, y_pred))\n"
    ]
